--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
     
 	<header0> <b>Inserir:</b> </header0>
 
-		<div class = "menus"><a href="inserir_instituicao.cgi"> Instituição </a></div>
+		<div class = "menus"><a href="inserir_instituicao.cgi/data"> Instituição </a></div>
 
 </body>
 </html>
