--- a/web/instituicao.html
+++ b/web/instituicao.html
@@ -1,7 +1,7 @@
 <doctype html>
 <title>Inserir instituição</title>
 <body style="font-family:Arial; font-size:20px;">
-    <form action="inserir_instituicao.cgi/insert" method="get"> 
+    <form action="insert" method="post"> 
     <h5>Preencha os dados da instituição</h5>
     <div class="form-group">
         <p><input class="form-control" type="text" name="nome" placeholder="Nome"></p>
@@ -10,10 +10,10 @@
         <p><input class="form-control" type="text" name="tipo" placeholder="Tipo"></p>
     </div>
     <div class="form-group">
-        <p><input class="form-control" type="text" name="num_regiao" placeholder="Número da Região"></p>
+        <p><input class="form-control" type="number" name="num_regiao" placeholder="Número da Região"></p>
     </div>
     <div class="form-group">
-        <p><input class="form-control" type="text" name="num_concelho" placeholder="Número do Concelho"></p>
+        <p><input class="form-control" type="number" name="num_concelho" placeholder="Número do Concelho"></p>
     </div>
     <div class="form-group">
         <p><input type="submit" value="Submit"></p>
