insert not done

--- a/web/instituicao.html
+++ b/web/instituicao.html
@@ -10,10 +10,10 @@
         <p><input class="form-control" type="text" name="tipo" placeholder="Tipo"></p>
     </div>
     <div class="form-group">
-        <p><input class="form-control" type="number" name="num_regiao" placeholder="Número da Região"></p>
+        <p><input class="form-control" type="number" name="num_concelho" placeholder="Número do concelho"></p>
     </div>
     <div class="form-group">
-        <p><input class="form-control" type="number" name="num_concelho" placeholder="Número do Concelho"></p>
+        <p><input class="form-control" type="number" name="num_regiao" placeholder="Número da região"></p>
     </div>
     <div class="form-group">
         <p><input type="submit" value="Submit"></p>
