inserir analise done

--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,8 @@
     
 	<header0> <b>Inserir:</b> </header0>
 
-		<div class = "menus"><a href="inserir_instituicao.cgi/data"> Instituição </a></div>
-
+		<div class = "menus"><a href="dataInstituicao"> Inserir Instituição </a></div>
+		<div class = "menus"><a href="dataAnalise"> Inserir Análise </a></div>
+		<div class = "menus"><a href="list"> list </a></div>
 </body>
 </html>
