--- a/web/instituicao.html
+++ b/web/instituicao.html
@@ -1,7 +1,7 @@
 <doctype html>
 <title>Inserir instituição</title>
 <body style="font-family:Arial; font-size:20px;">
-    <form action="insert" method="post"> 
+    <form action="insertInstituicao" method="post"> 
     <h5>Preencha os dados da instituição</h5>
     <div class="form-group">
         <p><input class="form-control" type="text" name="nome" placeholder="Nome"></p>
