insert_inst, alter_inst, remove_inst done

--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,14 @@
     
 	<header0> <b>Inserir:</b> </header0>
 
-		<div class = "menus"><a href="inserir_instituicao.cgi/data"> Instituição </a></div>
+		<div class = "menus"><a href="data_inst"> Instituição </a></div>
 
+	<header0> <b>Alterar:</b> </header0>
+
+		<div class = "menus"><a href="list"> Instituição </a></div>
+
+	<header0> <b>Remover:</b> </header0>
+
+		<div class = "menus"><a href="list"> Instituição </a></div>
 </body>
 </html>
