--- a/web/index.html
+++ b/web/index.html
@@ -16,34 +16,17 @@
 
 	<header0> <b>Alterar:</b> </header0>
 
-		<div class = "menus"><a href="list"> Instituição </a></div>
+		<div class = "menus"><a href="alterar_inst"> Instituição </a></div>
+		<div class = "menus"><a href="alterar_analise"> Análise </a></div>
+		<div class = "menus"><a href="alterar_medico"> Médico </a></div>
+		<div class = "menus"><a href="alterar_prescricao"> Prescrição </a></div>
 
 	<header0> <b>Remover:</b> </header0>
 
-		<div class = "menus"><a href="list"> Instituição </a></div>
+		<div class = "menus"><a href="listar_instituicoes"> Instituição </a></div>
+		<div class = "menus"><a href="listar_analises"> Análise </a></div>
+		<div class = "menus"><a href="listar_medicos"> Médico </a></div>
+		<div class = "menus"><a href="listar_prescricoes"> Prescrição </a></div>
 
-	<header0> <b>Alterar:</b> </header0>
-
-		<div class = "menus"><a href="list"> Análise </a></div>
-
-	<header0> <b>Remover:</b> </header0>
-
-		<div class = "menus"><a href="list"> Análise </a></div>
-
-	<header0> <b>Alterar:</b> </header0>
-
-		<div class = "menus"><a href="list"> Médico </a></div>
-		
-	<header0> <b>Remover:</b> </header0>
-
-		<div class = "menus"><a href="list"> Médico </a></div>
-
-	<header0> <b>Alterar:</b> </header0>
-
-		<div class = "menus"><a href="list"> Prescrição </a></div>
-		
-	<header0> <b>Remover:</b> </header0>
-
-		<div class = "menus"><a href="list"> Prescrição </a></div>
 </body>
 </html>
