--- a/web/index.html
+++ b/web/index.html
@@ -23,10 +23,10 @@
 
 	<header0> <b>Remover:</b> </header0>
 
-		<div class = "menus"><a href="listar_instituicoes"> Instituição </a></div>
-		<div class = "menus"><a href="listar_analises"> Análise </a></div>
-		<div class = "menus"><a href="listar_medicos"> Médico </a></div>
-		<div class = "menus"><a href="listar_prescricoes"> Prescrição </a></div>
+		<div class = "menus"><a href="list_inst"> Instituição </a></div>
+		<div class = "menus"><a href="list_analises"> Análise </a></div>
+		<div class = "menus"><a href="list_medicos"> Médico </a></div>
+		<div class = "menus"><a href="list_prescricoes"> Prescrição </a></div>
 
 </body>
 </html>
