--- a/web/alterar_prescricao.html
+++ b/web/alterar_prescricao.html
@@ -10,7 +10,7 @@
             <p><input class="form-control" type="hidden" name="num_doente" value="{{ params.get('num_doente') }}" placeholder="Número"></p>
         </div>
         <div class="form-group">
-            <p><input class="form-control" type="hidden" name="data" value="{{ params.get('data') }}" placeholder="Data"></p>
+            <p><input class="form-control" type="hidden" name="dia_hora" value="{{ params.get('dia_hora') }}" placeholder="Data"></p>
 
         </div>
         <div class="form-group">
@@ -23,7 +23,7 @@
             <p>Cédula do doente: <input class="form-control" type="datetime-local" step="1" name="novo_doente" value="{{ params.get('num_doente') }}" placeholder="Número"></p>
         </div>
         <div class="form-group">
-            <p>Data: <input class="form-control" type="datetime-local" step="1" name="nova_data" value="{{ params.get('data') }}" placeholder="Data"></p>
+            <p>Data: <input class="form-control" type="datetime-local" step="1" name="nova_data" value="{{ params.get('dia_hora') }}" placeholder="Data"></p>
 
         </div>
         <div class="form-group">
