--- a/web/index.html
+++ b/web/index.html
@@ -14,19 +14,12 @@
 		<div class = "menus"><a href="data_medico"> Médico </a></div>
 		<div class = "menus"><a href="data_prescricao"> Prescrição </a></div>
 
-	<header0> <b>Alterar:</b> </header0>
-
-		<div class = "menus"><a href="alterar_inst"> Instituição </a></div>
-		<div class = "menus"><a href="alterar_analise"> Análise </a></div>
-		<div class = "menus"><a href="alterar_medico"> Médico </a></div>
-		<div class = "menus"><a href="alterar_prescricao"> Prescrição </a></div>
-
-	<header0> <b>Remover:</b> </header0>
+	<header0> <b>Alterar/Remover:</b> </header0>
 
 		<div class = "menus"><a href="list_inst"> Instituição </a></div>
-		<div class = "menus"><a href="list_analises"> Análise </a></div>
-		<div class = "menus"><a href="list_medicos"> Médico </a></div>
-		<div class = "menus"><a href="list_prescricoes"> Prescrição </a></div>
+		<div class = "menus"><a href="list_analise"> Análise </a></div>
+		<div class = "menus"><a href="list_medico"> Médico </a></div>
+		<div class = "menus"><a href="list_prescricao"> Prescrição </a></div>
 
 </body>
 </html>
