--- a/web/prescricao.html
+++ b/web/prescricao.html
@@ -10,7 +10,7 @@
             <p><input class="form-control" type="number" name="num_doente" placeholder="Número de doente"></p>
         </div>
         <div class="form-group">
-            <p><input class="form-control" type="datetime-local" step="1" name="data" placeholder="Data"></p>
+            <p><input class="form-control" type="datetime-local" step="1" name="dia_hora" placeholder="Data"></p>
         </div>
         <div class="form-group">
             <p><input class="form-control" type="text" name="substancia" placeholder="Substância"></p>
