--- a/web/index.html
+++ b/web/index.html
@@ -17,9 +17,9 @@
 	<header0> <b>Alterar/Remover:</b> </header0>
 
 		<div class = "menus"><a href="list_inst"> Instituição </a></div>
-		<div class = "menus"><a href="list_analise"> Análise </a></div>
-		<div class = "menus"><a href="list_medico"> Médico </a></div>
-		<div class = "menus"><a href="list_prescricao"> Prescrição </a></div>
+		<div class = "menus"><a href="list_analises"> Análise </a></div>
+		<div class = "menus"><a href="list_medicos"> Médico </a></div>
+		<div class = "menus"><a href="list_prescricoes"> Prescrição </a></div>
 
 </body>
 </html>
